tests/components/api-gateway/t.yaml
---
defaultNamespace: kyma-system
prerequisites:
  - name: "cluster-essentials"
  - name: "istio"
    namespace: "istio-system"
  - name: "certificates"
    namespace: "istio-system"
components:
  - name: "istio-resources"
  - name: "ory"
  - name: "api-gateway"
